--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
         </div>
         <div class="header__right-block">
-            <button class="btn btn_white">Связаться с нами</button>
+            <button id="Btn-modal" class="btn btn_white">Связаться с нами</button>
         </div>
     </header>
     <div class="sidepanel">
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="offer__action">
-                <button class="btn btn_dark">Связаться с нами</button>
+                <button id="Btn-modal" class="btn btn_dark">Связаться с нами</button>
             </div>
         </div>
         <div class="container">
@@ -106,7 +106,7 @@
                         <img src="icons/left.svg" alt="prev">
                     </div>
                     <span id="current">03</span>
-                    /
+                    
                     <span id="total">04</span>
                     <div class="offer__slider-next">
                         <img src="icons/right.svg" alt="next">
@@ -124,7 +124,7 @@
                     </div>
                     <div class="offer__slide">
                         <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
+                    </div> -->  
                 </div>
             </div>
         </div>
@@ -287,11 +287,11 @@
         </div>
     </footer>
 
-    <div class="modal">
+    <div data-modal class="modal">
         <div class="modal__dialog">
             <div class="modal__content">
                 <form action="#">
-                    <div class="modal__close">&times;</div>
+                    <div data-close class="modal__close">&times;</div>
                     <div class="modal__title">Мы свяжемся с вами как можно быстрее!</div>
                     <input required placeholder="Ваше имя" name="name" type="text" class="modal__input">
                     <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal__input">
